# prac

./: CMakeLists.txt  task1.c  task1_3.c  task2.c  task2_v2.c  task3.c  task3_v2.c  task4.c  text2.txt  text3.txt
include/: Any.c  Any.h  Args.c  Args.h  Sort.c  Sort.h  Utils.c  Utils.h
